# Skyloader

./: README.md  package.json  vite.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: future.rs  lib.rs  sync_local_instances.rs
src/components/: BackgroundEffects.svelte  PageCard.svelte  PlayerHead.svelte  Select.svelte  Toasts.svelte
src/components/pages/: Builds.svelte  Game.svelte  Profiles.svelte  Settings.svelte
src/lib/: stores.js
src/lib/launcher/: fabric.js  forge.js  java.js  loader.js  mojang.js
src/lib/pages/builds/: getUniqueDirName.js  syncModsWithDisk.js
src/lib/utils/: background.js  skins.js  toasts.js  transitions.js  updater.js
src/routes/: +layout.svelte  +page.svelte
