[package]
name = "skyloader"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "skyloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nokhwa = { version = "0.10.9", features = ["input-native", "output-wgpu"] }
tokio = { version = "1", features = ["full"] }
image = "0.25.8"
base64 = "0.22.1"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
sha2 = "0.10.9"
zip = "7.0.0"
futures-util = "0.3.31"
futures = "0.3.31"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls-native-roots"] }
chksum-sha1 = "0.1.0"
tauri-plugin-os = "2"
sysinfo = "0.37.2"
tauri-plugin-dialog = "2"
tar = "0.4.44"
flate2 = "1.1.5"
rayon = "1.11.0"
